<resources>
    <string name="app_name">VSGUTULABS</string>
    <string name="text_logo">Эдуард Цыдыпов</string>
    <string name="laba1">ЛАБОРАТОРНАЯ РАБОТА №1</string>
    <string name="laba2">ЛАБОРАТОРНАЯ РАБОТА №2</string>
    <string name="laba3">ЛАБОРАТОРНАЯ РАБОТА №3</string>
    <string name="laba4">ЛАБОРАТОРНАЯ РАБОТА №4</string>
    <string name="laba5">ЛАБОРАТОРНАЯ РАБОТА №5</string>
    <string name="laba6">ЛАБОРАТОРНАЯ РАБОТА №6</string>
    <string name="laba7">ЛАБОРАТОРНАЯ РАБОТА №7</string>
    <string name="laba8">ЛАБОРАТОРНАЯ РАБОТА №8</string>
    <string name="laba9">ЛАБОРАТОРНАЯ РАБОТА №9</string>
    <string name="text_number1">Число 1</string>
    <string name="text_number2">Число 2</string>
    <string name="input_number1">0</string>
    <string name="input_number2">0</string>
    <string name="text_result">Результат</string>
    <string name="text_result_number">0</string>
    <string name="btn_calc">Сумма</string>
    <string name="btn_plus2">+2</string>
    <string name="btn_minus2">-2</string>
    <string name="btn_plus1">+1</string>
    <string name="btn_minus1">-1</string>
    <string name="cell"> </string>
    <string name="button_accessibility_label"> </string>

    <string name="operator"> </string>
    <string name="hint_text_calc">Введите</string>
    <string name="calc_number_0">0</string>
    <string name="calc_number_1">1</string>
    <string name="calc_number_2">2</string>
    <string name="calc_number_3">3</string>
    <string name="calc_number_4">4</string>
    <string name="calc_number_5">5</string>
    <string name="calc_number_6">6</string>
    <string name="calc_number_7">7</string>
    <string name="calc_number_8">8</string>
    <string name="calc_number_9">9</string>
    <string name="calc_point">,</string>
    <string name="calc_operator_plus">+</string>
    <string name="calc_operator_minus">-</string>
    <string name="calc_operator_multiply">*</string>
    <string name="calc_operator_divide">/</string>
    <string name="calc_operator_equal">=</string>

    <string name="gamerandomnumber">Игра "Отгадай число"</string>
    <string name="textque1">Четное/Нечетное</string>
    <string name="textque2">Диапозон 0-49/50-99</string>
    <string name="textque3">сумма цифр числа \n меньше чем 10 </string>
    <string name="hint1">Подсказка 1</string>
    <string name="hint2">Подсказка 2</string>
    <string name="hint3">Подсказка 3</string>
    <string name="hide">Скрыто</string>

    <string name="nickname">Никнейм</string>
    <string name="password">Пароль</string>

    <string name="RuRo_startGame">Начать</string>
    <string name="RuRO_option1">Кол-во игроков:</string>
    <string name="RuRO_option2">Кол-во пропуска хода:</string>
    <string name="RuRO_option3">Кол-во выстрелов 1-го игрока:</string>

    <string-array name="skip_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="reload_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="number_button_name">Игра "Чье больше"</string>
    <string-array name="priority_array">
        <item>Низкий</item>
        <item>Средний</item>
        <item>Высокий</item>
    </string-array>

</resources>