<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".laba2"
    tools:ignore="HardcodedText">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/SteelBlue"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:gravity="center"
        android:text="@string/laba2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/result"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/text_result_number"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_plus2" />

    <Button
        android:id="@+id/btn_plus2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="OnBtnClickPlus2"
        android:text="@string/btn_plus2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title" />

    <Button
        android:id="@+id/btn_minus2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="OnBtnClickMinus2"
        android:text="@string/btn_minus2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/btn_minus1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="50dp"
        android:onClick="OnBtnClickMinus1"
        android:text="@string/btn_minus1"
        app:layout_constraintEnd_toStartOf="@+id/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_plus1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="98dp"
        android:onClick="OnBtnClickPlus1"
        android:text="@string/btn_plus1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/result"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/game_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:text="Крестики-нолики"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/game_grid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_minus2" />

    <Button
        android:id="@+id/new_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onNewGameClick"
        android:text="Новая игра"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/game_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="16dp"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_minus2"
        app:rowCount="3">

        <Button android:onClick="onClick"
            android:id="@+id/cell1"/>
        <Button android:onClick="onClick"
            android:id="@+id/cell2"/>
        <Button android:onClick="onClick"
            android:id="@+id/cell3"/>
        <Button android:onClick="onClick"
            android:id="@+id/cell4"/>
        <Button android:onClick="onClick"
            android:id="@+id/cell5"/>
        <Button android:onClick="onClick"
            android:id="@+id/cell6"/>
        <Button android:onClick="onClick"
            android:id="@+id/cell7"/>
        <Button android:onClick="onClick"
            android:id="@+id/cell8"/>
        <Button android:onClick="onClick"
            android:id="@+id/cell9"/>

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/scorex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:text="Кол-во побед X: "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/scorey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:text="Кол-во побед O: "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    game-->

</androidx.constraintlayout.widget.ConstraintLayout>